objects/ASI_GiftBox_Order_Header__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Order_Contact__c</fullName>
        <label>Supplier Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_MCF__c</fullName>
        <label>MCF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Supplier__c</fullName>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pham Le Nguyen</fullName>
                </value>
                <value>
                    <fullName>Vibox</fullName>
                </value>
                <value>
                    <fullName>As Viet</fullName>
                </value>
                <value>
                    <fullName>Vinagift</fullName>
                </value>
                <value>
                    <fullName>Alphabox</fullName>
                </value>
                <value>
                    <fullName>Thuan Hung Phat</fullName>
                </value>
                <value>
                    <fullName>En Xanh</fullName>
                </value>
                <value>
                    <fullName>Omega</fullName>
                </value>
                <value>
                    <fullName>Nguyen Giang</fullName>
                </value>
                <value>
                    <fullName>Phuoc Lam</fullName>
                </value>
                <value>
                    <fullName>An Thinh</fullName>
                </value>
                <value>
                    <fullName>Dai Binh An</fullName>
                </value>
                <value>
                    <fullName>Ky Nguyen</fullName>
                </value>
                <value>
                    <fullName>Dong Duong</fullName>
                </value>
                <value>
                    <fullName>Thien Gia</fullName>
                </value>
                <value>
                    <fullName>Tam Y</fullName>
                </value>
                <value>
                    <fullName>Old-Suppliers</fullName>
                </value>
                <value>
                    <fullName>Xuan Tien</fullName>
                </value>
                <value>
                    <fullName>Bpro Advertising Co.</fullName>
                </value>
                <value>
                    <fullName>Jigsaw Co.</fullName>
                </value>
                <value>
                    <fullName>Tam advertising</fullName>
                </value>
                <value>
                    <fullName>Tri Luc Viet Co.</fullName>
                </value>
                <value>
                    <fullName>Delta Co.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_GiftBox_Order_Item__c.ASI_GiftBox_Order_Item_Amt__c</summarizedField>
        <summaryForeignKey>ASI_GiftBox_Order_Item__c.ASI_GiftBox_Order_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Gift Box Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Order_MCF__c</columns>
        <columns>ASI_GiftBox_Order_Supplier__c</columns>
        <columns>ASI_GiftBox_Order_Contact__c</columns>
        <columns>ASI_GiftBox_Order_Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MCF Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Box Orders</pluralLabel>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Order</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>